// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="Grid"
  data-test-id="cf-ui-grid"
  style="grid-template-columns: auto; grid-template-rows: auto; column-gap: 1rem; row-gap: 0;"
>
  Grid
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="Grid my-extra-class"
  data-test-id="cf-ui-grid"
  style="grid-template-columns: auto; grid-template-rows: auto; column-gap: 1rem; row-gap: 0;"
>
  Grid
</div>
`;

exports[`should have correct styles columnGap should be 1rem by default 1`] = `
<div
  class="Grid"
  data-test-id="cf-ui-grid"
  style="grid-template-columns: auto; grid-template-rows: auto; column-gap: 1rem; row-gap: 0;"
>
  Grid
</div>
`;

exports[`should have correct styles rowGap should be 0 by default 1`] = `
<div
  class="Grid"
  data-test-id="cf-ui-grid"
  style="grid-template-columns: auto; grid-template-rows: auto; column-gap: 1rem; row-gap: 0;"
>
  Grid
</div>
`;

exports[`should have correct styles should has correct numbers of columns 1`] = `
<div
  class="Grid"
  data-test-id="cf-ui-grid"
  style="grid-template-columns: repeat(12, minmax(0, 1fr); grid-template-rows: auto; column-gap: 1rem; row-gap: 0;"
>
  Grid
</div>
`;

exports[`should have correct styles should has correct numbers of rows 1`] = `
<div
  class="Grid"
  data-test-id="cf-ui-grid"
  style="grid-template-columns: auto; grid-template-rows: repeat(12, minmax(0, 1fr); column-gap: 1rem; row-gap: 0;"
>
  Grid
</div>
`;
